Avalara Fullqa/src/B2B Commerce/objects/E_RulePricingModifier__c.object
<CustomObject>
    <fields>
        <fullName>EndDate__c</fullName>
        <defaultValue>DATEVALUE(&quot;2099-12-31&quot;)</defaultValue>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PriceModifier__c</fullName>
        <label>Price Modifier</label>
        <referenceTo>E_PriceModifier__c</referenceTo>
        <relationshipLabel>Rule Pricing Modifiers</relationshipLabel>
        <relationshipName>E_RULE_MODIFIERS</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RulePriceModifierId__c</fullName>
        <externalId>true</externalId>
        <label>Rule Price Modifier Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rule__c</fullName>
        <label>Rule</label>
        <referenceTo>E_Rule__c</referenceTo>
        <relationshipLabel>Rule Pricing Modifiers</relationshipLabel>
        <relationshipName>E_RULE_MODIFIERS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>CC Rule Pricing Modifier</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PM-{00000}</displayFormat>
        <label>Rule Pricing Modifier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Rule Pricing Modifiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>